--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,38 @@
 @import "tailwindcss";
+
+.Container {
+  max-width: 1536px;
+  position: relative;
+  margin: 0 auto;
+  padding: 0 50px;
+  /* border: 1px solid red; */
+  border: none;
+}
+
+@media only screen and (max-width: 1220px) {
+  .Container {
+    padding: 0 40px;
+  }
+}
+
+@media only screen and (max-width: 1020px) {
+  .Container {
+    padding: 0 35px;
+  }
+}
+
+@media only screen and (max-width: 820px) {
+  .Container {
+    padding: 0 30px;
+  }
+}
+@media only screen and (max-width: 620px) {
+  .Container {
+    padding: 0 20px;
+  }
+}
+@media only screen and (max-width:420px) {
+    .BigContainer{
+      padding: 0 10px;
+  }
+    }
